--- a/_includes/theme-home-builtin-1.html
+++ b/_includes/theme-home-builtin-1.html
@@ -10,7 +10,7 @@
   <div class="column">
 
     <div style="position: relative; top: 75px; z-index: 1" class="ui fluid centered small circular image">
-      <img src="{{ site.data.bio.basics.picture }}">
+      <img src="mahoe7.github.io/images/Aviary Photo_131166281005894729.png">
     </div>
 
 
